[package]
name = "lynx-balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.72"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
hyper = "0.14.27"
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }
kube = { version = "0.85.0", features = ["runtime", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1.31.0"

